# lisa

./: .gitmodules  Vagrantfile  install_base.sh  logging.conf  mytest.py  setup.py  testcodegen.py  testmonad.c  testmonad.c.bak  testmonad.h  testmonad.py
devlib/collector/: ftrace.py
doc/: conf.py
ipynb/examples/: typical_experiment.ipynb
ipynb/releases/: ReleaseNotes_v16.10.ipynb  ReleaseNotes_v16.12.ipynb
libs/: __init__.py.bak
libs/utils/: env.py  test.py  test_workload.py
lisa/: _ccodegen.py  _git.py  _kmod.py  _unshare.py  conf.py  datautils.py  energy_model.py  exekall_customize.py  pelt.py  pelt2.py  target.py  trace.py  utils.py  version.py
lisa/_cli_tools/: lisa_load_kmod.py
lisa/analysis/: _rust_fast_import.py  base.py  frequency.py  idle.py  rust.py  tasks.py
lisa/doc/: helpers.py
lisa/tests/: base.py
lisa/wlgen/: rta.py
shell/: lisa_shell
src/shell/: lisa_shell
tests/eas/: capacity_capping.py  cpuhp.py  generic.py  heavy_load.py  rfc.py  (+3 more)
tools/: buildroot_config  lisa-buildroot-create-rootfs  lisa-execute-notebook  lisa-plot  parse_trace_perf_script.py  plots.py
tools/analysis/: Cargo.toml
tools/analysis/analysis/: Cargo.toml
tools/analysis/analysis/src/: arrow.rs
tools/analysis/analysis/src/analysis/: mod.rs  tasks.rs
tools/analysis/src/: event.rs  eventreq.rs  futures.rs  main.rs  string.rs
tools/analysis/src/analysis/: mod.rs  tasks.rs  test.rs
tools/analysis/traceevent/: Cargo.toml
tools/analysis/traceevent/src/: cparser.rs  grammar.rs  header.rs  io.rs  lib.rs  parser.rs
tools/analysis/userspace/src/: main.rs
(+150 files in other folders)
